# kai-assistant

./: .gitignore  calendar.db  main.py  pyproject.toml  setup.py
agents/: __init__.py
agents/calendar_agent/: __init__.py  agent.py  tools.py
kai/: __init__.py  manager.py
